--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,10 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JWT
+security.jwt.secret=ghk45jgherogho834go3h4g
+security.jwt.issuer=Main
+#this session lasts one week
+security.jwt.ttlMillis=604800000
+
 
